refactor: adjunsts for new logic in commandinterpreter